public/stylesheets/sass/_forms.sass
.grouped-checkbox
  width: 1em

.big-search
  margin-bottom: 3em
  input
    &[type='text']
      width: 85%
    &[type='submit']
      width: 15%
      margin: 0
      border-left: none
      @include rounded-corners(0, 4px, 4px, 0)

form ul li
  @include stack-list
  padding: .5em 0
  position: relative
  input[type="submit"]
    float: left
  .element
    @extend .stack2of3
    input
      width: 98%
  .label
    @extend .stack1of3
    label
      font-family: "Raleway"
  .label-and-element
    text-align: left
    @extend .stack
    label, input
      display: inline
  .description
    font-size: .8em
    margin: .5em 0
    width: 75%
    color: #999

.label.hidden
  display: none

.element, .label, .label-and-element
  > div, label
    @include stack-content
  > input, select
    @include stack-reset

.double.element
  text-align: left
  select
    display: inline
    margin-right: 3.5%
  input
    width: 25%
    display: inline
    margin-right: 2%
    &:last-child
      margin-right: 0

.code textarea
  height: 16em
  
      
.date_field
  input
    width: 100px

